[project]
dependencies = [
    "matplotlib",
    "jupyter",
    "torch>=2.9.0,<3",
    "scikit-learn",
    "ipywidgets",
    "nbdev",
    "opencv-python",
]
name = "stream-pca"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
stream_pca = { path = ".", editable = true }

[tool.black]
line-length = 130
